Fixed spacing around illumine logo

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,11 +4,13 @@ h1 {
     color: #999;
     align-self: flex-start;
     display: inline-block;
-    margin: 0 0 -20px -50px;
+    margin: -20px 0 -80px -50px;
   }
 
   img {
-    margin-bottom: -20px;
+    margin: 0 0 -80px, 0;
+    align-self: flex-start;
+    flex-wrap: nowrap;
   }
   
   div {
